@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'left to right direction
skinparam classAttributeIconSize 0

hide circle
hide methods

title US001 - Domain Model

class Organization {
    name
    nif
    website
    phoneNumber
    email
}

class Skill{
    name

}

class HRM{

}

Organization "1" -- "*" Skill : "owns >"
HRM "1" -- "*" Skill : "register >"

@enduml